Changelog
=========

A retrospective of the various releases this component has had, what's been
changed, what's been fixed, and so forth, follows.  You can find out more
about the issue numbers listed below by visiting the project's issue tracker
at https://oodt.jpl.nasa.gov/jira/browse/CA.


1.1.9 — TBD
-----------

• CA-1234 - UnicodeDecodeError on person ingest


1.1.8 — Dupe dupe dupe dupe dupe
--------------------------------

• CA-1123 - Duplicate Person objects in portal when someone moves from one Site
  to another Site


1.1.7 — More Upgrades
---------------------

• Plone 4.3 compatibility.
• Use z3c.autoinclude.


1.1.6 — The Clone Wars
----------------------

This release includes:

* CA-971 - Sponsoring site is non-optional, must be optional
* CA-1029 - Sites cannot be displayed if the have outside PIs
* CA-1037 - Karen Andrerson not listed as PI of Dana Farber
* CA-1049 - Allow duplicate people at different sites
* Plone 4.2.4 compatibility


1.1.5 — Upgrades
----------------

Made compatible with Plone 4.1.5 and eea.facetednavigation 4.5


1.1.4 — Test Support
--------------------

This release includes:

* Depending on just Plone the framework instead of Plone the application.
 

1.1.3 — Flip-Flop
-----------------

First they want it reversed, now they don't:

* CA-789 - On the members list, under the site Type box, sort them
  alphabetically


1.1.2 — Dependency Cleanup
--------------------------

This release drops the dependency on the P4A_ "subtyper" mechanism, as the
EEA_ `faceted navigation`_ mechanism no longer needs it.


1.1.1 — Upgrade Cleanup
-----------------------

This release updates the GenericSetup profile to 4, provides upgrade steps to
that profile, and makes the testing and development harness depend on "trunk"
level of other eggs instead of on released versions of those eggs.  Also, it
removes in incompatible profile dependency.


1.1.0 — Plone 4
---------------

This release makes eke.site compatible with Plone 4.

