@@ -1,12 +1,6 @@
 {
 	"folders":
 	[
-		{
-			"path": "docs"
-		},
-        {
-            "path": "eke"
-        },
         {
             "path": ".",
             "folder_exclude_patterns": ["bin", "dep-src", "develop-eggs", "dist", "build", "*.egg-info", "parts", "var"],
