@@ -15,7 +15,7 @@ RESERVED. U.S. Government Sponsorship acknowledged.
     <property name='global_allow'>False</property>
     <property name='filter_content_types'>True</property>
     <property name='allowed_content_types'/>
-    <property name='allow_discussion'>True</property>
+    <property name='allow_discussion'>False</property>
     <property name='default_view'>view</property>
     <property name='view_methods'>
         <element value='view'/>
