@@ -17,7 +17,7 @@ RESERVED. U.S. Government Sponsorship acknowledged.
     <property name='allowed_content_types'>
 		<element value='Person'/>
 	</property>
-    <property name='allow_discussion'>True</property>
+    <property name='allow_discussion'>False</property>
     <property name='default_view'>view</property>
     <property name='view_methods'>
         <element value='view'/>
