@@ -11,6 +11,7 @@ at https://oodt.jpl.nasa.gov/jira/browse/CA.
 -----------
 
 • CA-1234 - UnicodeDecodeError on person ingest
+• CA-1229 - Discussion re-enabled after upgrade
 
 
 1.1.8 — Dupe dupe dupe dupe dupe
